--- a/final/src/member/member.css
+++ b/final/src/member/member.css
@@ -199,17 +199,11 @@ img {
 }
 
 /* ---------------------------coupon--------------------------- */
-.example3 {
-  background: #8bc34a;
-  background: radial-gradient(circle at top left, transparent 15px, #8bc34a 0)
-      top left,
-    radial-gradient(circle at top right, transparent 15px, #8bc34a 0) top right,
-    radial-gradient(circle at bottom right, transparent 15px, #8bc34a 0) bottom
-      right,
-    radial-gradient(circle at bottom left, transparent 15px, #8bc34a 0) bottom
-      left;
-  background-size: 50% 50%;
-  background-repeat: no-repeat;
-  padding: 1em 1 0.2em;
-  max-width: 20em;
+.coupon-svg-div {
+  width: 180px;
+  margin: 0 auto;
+}
+.coupon-svg {
+  width: 180px;
+  height: auto;
 }
