--- a/final/src/member/member.css
+++ b/final/src/member/member.css
@@ -143,6 +143,14 @@ td button:hover {
 img {
   object-fit: contain;
 }
+.orderItemImg {
+  width: 50px;
+  height: 50px;
+  /* margin: 0 auto; */
+}
+.orderItemImg img {
+  width: 100%;
+}
 /* ---------------------------account setting--------------------------- */
 .img-select {
   color: #99cb77;
