--- a/final/src/member/member.css
+++ b/final/src/member/member.css
@@ -2,7 +2,7 @@
   font-family: 'Noto Sans TC', sans-serif;
   box-shadow: #559534 !important;
 }
-input:focus {
+.form-control:focus {
   box-shadow: rgba(0, 89, 83, 0.25) !important ;
 }
 
@@ -270,6 +270,7 @@ img {
   color: #559534;
   text-decoration: none;
 }
+/* ---------------------------硬改--------------------------- */
 .login-btn:active {
   border: 1px #99cb77 solid !important;
   background-color: #99cb77 !important;
@@ -289,4 +290,29 @@ img {
 
 .btn:focus {
   box-shadow: #559534 !important;
+}
+.form-con {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.form-con:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #99cb77;
+  outline: 0;
+  box-shadow: 0 0 0 0.1rem rgba(0, 160, 53, 0.192);
+}
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: rgba(0, 160, 53, 0.05) !important;
 }
