--- a/final/src/member/member.css
+++ b/final/src/member/member.css
@@ -316,3 +316,7 @@ img {
 .table-striped tbody tr:nth-of-type(odd) {
   background-color: rgba(0, 160, 53, 0.05) !important;
 }
+input:-webkit-autofill {
+  box-shadow: 0 0 0px 1000px rgba(160, 224, 56, 0.1) inset !important;
+  -webkit-text-fill-color: #495057 !important;
+}
