--- a/final/src/member/member.css
+++ b/final/src/member/member.css
@@ -9,8 +9,8 @@
 /* ---------------------------member_navbar通用--------------------------- */
 .member_navbar {
   width: 30%;
-  height: 100vh;
-  display: block;
+  /* height: 100vh; */
+  /* display: block; */
   padding: 20px 0 0 0;
   /* position: absolute; */
 }
