--- a/final/src/member/member.css
+++ b/final/src/member/member.css
@@ -137,6 +137,20 @@
   color: #99cb77;
   text-decoration: none;
 }
+.coupon-get {
+  border: 1px #99cb77 solid;
+  background-color: #99cb77;
+  border-radius: 5px;
+  padding: 2px 10px;
+  text-decoration: none;
+  color: #ffffff;
+}
+.coupon-get:focus {
+  border: 1px #99cb77 solid !important;
+  color: #ffffff !important;
+  outline: none;
+  cursor: not-allowed;
+}
 .order-btn:hover {
   background-color: #559534;
   color: #ffffff;
